Panel#2 :hover background fix

--- a/p2/dev/p2.html
+++ b/p2/dev/p2.html
@@ -1,41 +1,43 @@
 <div class="general_box clearfix">
 	<h3>Panel postaci #2</h3>
-	<div class="ax p2 ch1">
-		<div class="p2avatar">
-			<img src="http://i.imgur.com/LZ7JGte.png">
-		</div>
-		<div class="p2info">
-			<table>
-				<tr>
-					<td>Stanowisko OOC:</td>
-					<td>Zaufany Gracz</td>
-				</tr>
-				<tr>
-					<td>Imię i nazwisko:</td>
-					<td>Krzysztof Golder</td>
-				</tr>
-				<tr>
-					<td>Miejsce pracy:</td>
-					<td>Urząd Miasta</td>
-				</tr>
-				<tr>
-					<td>Stanowisko:</td>
-					<td>Zastępca Burmistrza LS</td>
-				</tr>
-				<tr>
-					<td>Numer telefonu:</td>
-					<td>33311</td>
-				</tr>
-				<tr>
-					<td>Adres zamieszkania:</td>
-					<td>Marina</td>
-				</tr>
-			</table>
-		</div>
-		<div class="p2vehs">
-			<img src="http://i.imgur.com/R1dlDTj.jpg">
-			<img src="http://i.imgur.com/qWWThS5.jpg">
-			<img src="http://i.imgur.com/MJtDaW5.jpg">
+	<div class="ax">
+		<div class=" p2 ch1">
+			<div class="p2avatar">
+				<img src="http://i.imgur.com/LZ7JGte.png">
+			</div>
+			<div class="p2info">
+				<table>
+					<tr>
+						<td>Stanowisko OOC:</td>
+						<td>Zaufany Gracz</td>
+					</tr>
+					<tr>
+						<td>Imię i nazwisko:</td>
+						<td>Krzysztof Golder</td>
+					</tr>
+					<tr>
+						<td>Miejsce pracy:</td>
+						<td>Urząd Miasta</td>
+					</tr>
+					<tr>
+						<td>Stanowisko:</td>
+						<td>Zastępca Burmistrza LS</td>
+					</tr>
+					<tr>
+						<td>Numer telefonu:</td>
+						<td>33311</td>
+					</tr>
+					<tr>
+						<td>Adres zamieszkania:</td>
+						<td>Marina</td>
+					</tr>
+				</table>
+			</div>
+			<div class="p2vehs">
+				<img src="http://i.imgur.com/R1dlDTj.jpg">
+				<img src="http://i.imgur.com/qWWThS5.jpg">
+				<img src="http://i.imgur.com/MJtDaW5.jpg">
+			</div>
 		</div>
 	</div>
 </div>
