multiple panels ability implementation

--- a/p2/dev/p2.html
+++ b/p2/dev/p2.html
@@ -1,7 +1,7 @@
 <div class="general_box clearfix">
 	<h3>Panel postaci #2</h3>
-	<div class="ax">
-		<div class=" p2 ch1">
+	<div class="ax ch1">
+		<div class=" p2">
 			<div class="p2avatar">
 				<img src="http://i.imgur.com/LZ7JGte.png">
 			</div>
